he is the person in charge of the merges. To identify the developer responsible
for a given patch, see the "new patches" section of each log.

____________________________________________________________________
** CHANGES ALONG siesta@uam.es--2006/siesta-devel--reference--2.1
--------------------------------------------------------------------

2007-05-12 18:00:12 GMT	Alberto Garcia <albertog@icmab.es>	patch-56

Summary: Fixes for compilation of test-xml and MPI tests

* A warning is now printed if the user tries to invoke 'make'
from the xmlparser or MPI directories to compile test-xml or
the MPI tests, so that the proper VPATH is used.

* Add pxf.o dependency to test-xml

* Add INCFLAGS to default suffix rule to Intel mkl .make file.

2007-05-07 09:50:12 GMT	Alberto Garcia <albertog@icmab.es>	patch-55

Summary: Portability fixes: xmlparser split. New mpich pe in matterhorn

* Split the compilation of libxmlparser.a and the xml-test program, as the
  PGI compiler cannot deal with the DOM part.
* Compile test programs in Src/MPI at main compilation time. (It is harder
  to do it later if vpath is used.)

* New mpich .make files for matterhorn
  (the oci.q queue does not support myrinet). New script in Tests/Scripts.

2007-04-30 08:50:12 GMT	Alberto Garcia <albertog@icmab.es>	patch-54

Summary: Portability fixes (matterhorn/pgf90). Wider basis enthalpy field.

 * agarcia@siesta.arch--2006/siesta-fix--matterhorn--0.1--patch-1
   More denchar and gen-basis objs

 * agarcia@siesta.arch--2006/siesta-fix--matterhorn--0.1--patch-2
   Wider field in BASIS_ENTHALPY

 * agarcia@siesta.arch--2006/siesta-fix--matterhorn--0.1--patch-3
   Fix matterhorn Sys files for VPATH compilation


2007-04-27 16:15:12 GMT	Alberto Garcia <albertog@icmab.es>	patch-53

Summary: Merge of XML tester by Eduardo Anglada
Keywords: 

* New command-line interface
* Merged new functionality into old test.mk

* Some of the new tests are not yet properly integrated.